--- a/database.yml
+++ b/database.yml
@@ -2,14 +2,14 @@
 development:
   dialect: postgres
   database: social_api_development
-  user: postgres_user
+  user: postgres
   password: postgres
-  host: 192.168.86.40
-  port: 4321
+  host: 127.0.0.1
+  port: 5432
   pool: 5
 
 test:
-  url: {{envOr "TEST_DATABASE_URL" "postgres://postgres_user:postgres@192.168.86.40:4321/social_api_test?sslmode=disable"}}
+  url: {{envOr "TEST_DATABASE_URL" "postgres://postgres:postgres@127.0.0.1:5432/social_api_test?sslmode=disable"}}
 
 production:
-  url: {{envOr "DATABASE_URL" "postgres://postgres_user:postgres@192.168.86.40:4321/social_api_production?sslmode=disable"}}
+  url: {{envOr "DATABASE_URL" "postgres://postgres:postgres@127.0.0.1:5432/social_api_production?sslmode=disable"}}
